--- a/pom.xml
+++ b/pom.xml
@@ -184,13 +184,13 @@
         </dependency>
         <dependency>
             <groupId>javax.el</groupId>
-            <artifactId>el-api</artifactId>
-            <version>1.0</version>
+            <artifactId>javax.el-api</artifactId>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>el-impl</groupId>
-            <artifactId>el-impl</artifactId>
-            <version>1.0</version>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
