--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,6 +55,11 @@
         <param-value>500000</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>org.ajax4jsf.VIEW_HANDLERS</param-name>
+        <param-value>com.sun.facelets.FaceletViewHandler</param-value>
+    </context-param>
+
     <listener>
         <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
     </listener>
@@ -84,7 +89,7 @@
 
     <servlet-mapping>
         <servlet-name>FacesServlet</servlet-name>
-        <url-pattern>*.faces</url-pattern>
+        <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
